[gd_scene format=3 uid="uid://6t0i2fbovu0o"]

[ext_resource type="Script" uid="uid://cmns0y8lx0w6w" path="res://shipbuilder/shipbuilder.gd" id="1_spspl"]
[ext_resource type="Texture2D" uid="uid://e0xtnwyn8ve5" path="res://icon.svg" id="2_v710s"]
[ext_resource type="Script" uid="uid://gcwh0ke7l05y" path="res://shipbuilder/camera_2d.gd" id="3_v710s"]
[ext_resource type="Script" uid="uid://b8m4x0d8g8bb3" path="res://shipbuilder/savemenu.gd" id="4_x73uu"]

[node name="Shipbuilder" type="Node2D" unique_id=760432318]
script = ExtResource("1_spspl")

[node name="Ghostblocks" type="Node" parent="." unique_id=1291956008]

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1953512740]
position = Vector2(2500, 2500)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_v710s")

[node name="Camera2D" type="Camera2D" parent="." unique_id=840200900]
position = Vector2(2408, 2567)
script = ExtResource("3_v710s")

[node name="Hull" type="Button" parent="Camera2D" unique_id=1308914914]
offset_left = -547.0
offset_top = 264.0
offset_right = -497.0
offset_bottom = 295.0
text = "HULL"

[node name="Generator" type="Button" parent="Camera2D" unique_id=1433509448]
offset_left = -464.0
offset_top = 266.0
offset_right = -361.0
offset_bottom = 297.0
text = "GENERATOR"

[node name="Thruster" type="Button" parent="Camera2D" unique_id=97184763]
offset_left = -329.0
offset_top = 266.0
offset_right = -254.0
offset_bottom = 297.0
text = "THRUSTER"

[node name="Fueltank" type="Button" parent="Camera2D" unique_id=1882884458]
offset_left = -197.0
offset_top = 265.0
offset_right = -108.0
offset_bottom = 296.0
text = "FUELTANK"

[node name="PowerGeneration" type="Label" parent="Camera2D" unique_id=1368250137]
offset_left = -563.0
offset_top = -312.0
offset_right = -380.0
offset_bottom = -289.0
text = "POWER GENERATION: 0 MW"

[node name="MaxAcceleration" type="Label" parent="Camera2D" unique_id=1964076750]
offset_left = -565.0
offset_top = -280.0
offset_right = -325.0
offset_bottom = -257.0
text = "MAX ACCELERATION: 0 M/S^2 "

[node name="Range" type="Label" parent="Camera2D" unique_id=268592247]
offset_left = -565.0
offset_top = -194.0
offset_right = -468.0
offset_bottom = -171.0
text = "DV: 0 M/S"

[node name="FuelCapacity" type="Label" parent="Camera2D" unique_id=1642546109]
offset_left = -565.0
offset_top = -252.0
offset_right = -393.0
offset_bottom = -229.0
text = "FUEL CAPACITY: 0 L"

[node name="FuelConsumption" type="Label" parent="Camera2D" unique_id=1858091404]
offset_left = -565.0
offset_top = -162.0
offset_right = -399.0
offset_bottom = -139.0
text = "CONSUMPTION: 0 L/S"

[node name="SaveButton" type="Button" parent="Camera2D" unique_id=1180525544]
offset_left = 467.0
offset_top = -307.0
offset_right = 553.0
offset_bottom = -276.0
text = "SAVE SHIP"

[node name="Savemenu" type="Control" parent="Camera2D/SaveButton" unique_id=1223766691]
layout_mode = 1
anchor_left = -33.430233
anchor_top = -72.90323
anchor_right = -29.465117
anchor_bottom = -67.29032
script = ExtResource("4_x73uu")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Camera2D/SaveButton/Savemenu" unique_id=1403443030]
layout_mode = 0
offset_right = 341.0
offset_bottom = 173.0
color = Color(0, 0, 0, 0.3254902)

[node name="ConfirmSave" type="Button" parent="Camera2D/SaveButton/Savemenu" unique_id=211131652]
layout_mode = 0
offset_left = 216.0
offset_top = 119.0
offset_right = 320.0
offset_bottom = 164.0
disabled = true
text = "SAVE"

[node name="Cancelbutton" type="Button" parent="Camera2D/SaveButton/Savemenu" unique_id=424596169]
layout_mode = 0
offset_left = 22.0
offset_top = 118.0
offset_right = 126.0
offset_bottom = 163.0
text = "CANCEL"

[node name="Label" type="Label" parent="Camera2D/SaveButton/Savemenu" unique_id=351018526]
layout_mode = 0
offset_left = 32.0
offset_top = 44.0
offset_right = 159.0
offset_bottom = 67.0
text = "Name your ship:"

[node name="LineEdit" type="LineEdit" parent="Camera2D/SaveButton/Savemenu" unique_id=361333634]
layout_mode = 0
offset_left = 174.0
offset_top = 43.0
offset_right = 315.0
offset_bottom = 74.0
clear_button_enabled = true

[node name="ExitButton" type="Button" parent="Camera2D" unique_id=1152062192]
offset_left = 523.0
offset_top = 286.0
offset_right = 564.0
offset_bottom = 317.0
text = "EXIT"

[connection signal="pressed" from="Camera2D/Hull" to="." method="_on_hull_pressed"]
[connection signal="pressed" from="Camera2D/Generator" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Camera2D/Thruster" to="." method="_on_thruster_pressed"]
[connection signal="pressed" from="Camera2D/Fueltank" to="." method="_on_fueltank_pressed"]
[connection signal="pressed" from="Camera2D/SaveButton" to="Camera2D/SaveButton/Savemenu" method="_on_save_button_pressed"]
[connection signal="pressed" from="Camera2D/SaveButton/Savemenu/ConfirmSave" to="." method="_on_confirm_save_pressed"]
[connection signal="pressed" from="Camera2D/SaveButton/Savemenu/ConfirmSave" to="Camera2D/SaveButton/Savemenu" method="_on_confirm_save_pressed"]
[connection signal="pressed" from="Camera2D/SaveButton/Savemenu/Cancelbutton" to="Camera2D/SaveButton/Savemenu" method="_on_cancelbutton_pressed"]
[connection signal="text_changed" from="Camera2D/SaveButton/Savemenu/LineEdit" to="Camera2D/SaveButton/Savemenu" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Camera2D/ExitButton" to="." method="_on_exit_button_pressed"]
